--- a/Python_OOP1_ClassInstance.ipynb
+++ b/Python_OOP1_ClassInstance.ipynb
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "id": "7c931a63",
       "metadata": {
         "deletable": false,
@@ -152,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "id": "51f11a87",
       "metadata": {
         "deletable": false,
@@ -223,7 +223,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "id": "2968735c",
       "metadata": {
         "deletable": false,
@@ -300,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "id": "c9976e13",
       "metadata": {
         "deletable": false,
@@ -378,7 +378,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "id": "e0bcd0ba",
       "metadata": {
         "deletable": false,
@@ -445,7 +445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 100,
       "id": "b363d0ac",
       "metadata": {
         "deletable": false,
@@ -465,7 +465,7 @@
           "height": 211
         },
         "id": "b363d0ac",
-        "outputId": "54bb0d7e-e00f-4832-d17d-34858a163db9"
+        "outputId": "b4e15e0b-d49b-4b17-9dcd-ac089cd91bc0"
       },
       "outputs": [
         {
@@ -475,7 +475,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-88-66ca14f32664>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# You may need to create the instances again after adding a method to your class.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# I pasted the code here.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0memp_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEmployee\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Corey'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Schafer'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m50000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0memp_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEmployee\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Test'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'User'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m60000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-100-ea3599acd0dc>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# You may need to create the instances again after adding a method to your class.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# I pasted the code here.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0memp_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEmployee\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Corey'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Schafer'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m50000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0memp_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEmployee\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Test'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'User'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m60000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# YOUR CODE HERE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mTypeError\u001b[0m: Employee() takes no arguments"
           ]
         }
@@ -485,16 +485,37 @@
         "# I pasted the code here.\n",
         "emp_1 = Employee('Corey', 'Schafer', 50000)\n",
         "emp_2 = Employee('Test', 'User', 60000)\n",
-        "\n",
         "# YOUR CODE HERE\n",
+        "\n",
+        "def __init__(self, first, last, pay):\n",
+        "    self.first = first\n",
+        "    self.last = last\n",
+        "    self.pay = pay\n",
+        "    self.email = first + '.' + last + '@company.com'\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "emp_1 = Employee('Corey', 'Schafer', 50000)\n",
         "emp_2 = Employee('Test', 'User', 60000)\n",
         "\n",
         "print(emp_1.email)\n",
         "print(emp_2.email)\n",
         "\n",
-        "print(emp_2.fullname())"
+        "print('{} {}'.format(emp_1.first, emp_1.last))\n",
+        "print('{} {}'.format(emp_2.first, emp_2.last))\n",
+        "\n",
+        "print(emp_1.fullname())\n",
+        "print(emp_2.fullname())\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "t9SvSZJqI3wY"
+      },
+      "id": "t9SvSZJqI3wY"
     }
   ],
   "metadata": {
