--- a/Python_OOP2_ClassVariables.ipynb
+++ b/Python_OOP2_ClassVariables.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/gckalyani/exerPythObjectOriented/blob/master/Python_OOP2_ClassVariables.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "90a9d05f",
       "metadata": {
         "deletable": false,
@@ -105,11 +95,11 @@
           "solution": true,
           "task": false
         },
-        "id": "69e11ad3",
-        "outputId": "77ad48cb-6248-4b38-e320-8d8a63002087",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "69e11ad3",
+        "outputId": "77ad48cb-6248-4b38-e320-8d8a63002087"
       },
       "outputs": [
         {
@@ -211,11 +201,11 @@
           "solution": true,
           "task": false
         },
-        "id": "f062bd28",
-        "outputId": "68bf9586-7b02-44dd-c496-84dc1c1a8ca9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "f062bd28",
+        "outputId": "68bf9586-7b02-44dd-c496-84dc1c1a8ca9"
       },
       "outputs": [
         {
@@ -317,11 +307,11 @@
           "solution": true,
           "task": false
         },
-        "id": "1c7ed783",
-        "outputId": "0387338a-0c4d-4239-8437-b3ee7f5ff2da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1c7ed783",
+        "outputId": "0387338a-0c4d-4239-8437-b3ee7f5ff2da"
       },
       "outputs": [
         {
@@ -379,11 +369,11 @@
           "solution": true,
           "task": false
         },
-        "id": "3a7dbbda",
-        "outputId": "693d2c2b-8a39-4522-a845-069c31a21a61",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3a7dbbda",
+        "outputId": "693d2c2b-8a39-4522-a845-069c31a21a61"
       },
       "outputs": [
         {
@@ -444,11 +434,11 @@
           "solution": true,
           "task": false
         },
-        "id": "addd980c",
-        "outputId": "4cdc8ffc-cb83-458f-db28-526920566c0d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "addd980c",
+        "outputId": "4cdc8ffc-cb83-458f-db28-526920566c0d"
       },
       "outputs": [
         {
@@ -520,8 +510,7 @@
       "version": "3.8.8"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
